save changes: language + form + css menu

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -32,5 +32,11 @@
         "monthNamesShort": ["Jan", "Fev", "Mar", "Avr", "Mai", "Jun","Jui", "Aoû", "Sep", "Oct", "Nov", "Dec"],
         "today": "Aujourd'hui",
         "weekHeader": "Wk"
+    },
+    "rendement":{
+        "moduleName":"Rendement",
+        "estimations":"Estimations ",
+        "recolte":"Récolte",
+        "suiviQualitatif":"Suivi qualitatif"
     }
 }
